feat: update .gitignore to exclude certificates and logs

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .[Tt]mp
 .[Tt]emp
 .env
+
+# Ingore certificates
+**/certs/*
+!**/certs/.gitkeep
+!**/certs/myserver.cert
+!**/certs/myserver.key
+
+# Ignore logs
+**/*.log
+**/*.log.*
