fix: networking handle and config documentation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro # Mount the Docker socket so Traefik can listen to events
       - ./traefik:/etc/traefik # Mount the configuration folder
+    networks:
+      - myserver
 
   dockerproxy:
     image: ghcr.io/tecnativa/docker-socket-proxy:latest
@@ -36,6 +38,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: always
+    networks:
+      - myserver
 
   gethomepage:
     image: ghcr.io/gethomepage/homepage:latest
@@ -56,8 +60,9 @@ services:
       - ./gethomepage/images:/app/public/images
       - ./gethomepage/icons:/app/public/icons
     restart: always
+    networks:
+      - myserver
 
 networks:
-  default:
-    name: myserver
+  myserver:
     external: true
